Bug 437908 Search/Filters don't check correctly for address in Mac OS X Address Book. r/sr=bienvenu