mailnews/addrbook/src/nsAbOSXDirectory.h
@@ -99,6 +99,8 @@ public:
   NS_IMETHOD HasCard(nsIAbCard *aCard, PRBool *aHasCard);
   NS_IMETHOD HasDirectory(nsIAbDirectory *aDirectory, PRBool *aHasDirectory);
   NS_IMETHOD GetURI(nsACString &aURI);
+  NS_IMETHOD CardForEmailAddress(const nsACString &aEmailAddress,
+                                 nsIAbCard **aResult);
 
   // nsIAbOSXDirectory
   nsresult AssertChildNodes();
